# RESI-models

./: .env.example  .gitignore  CONTRIBUTOR_AGREEMENT.md  LICENSE  MODEL_LICENSE.md  MODEL_LICENSE_TEMPLATE.md  README.md  TERMS_OF_SERVICE.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: MINER.md  MINER_CLI.md  VALIDATOR.md  VALIDATOR_SETUP.md
neurons/: miner.py  miner_cli.py  test_commitment.py  test_miner_cli.py
real_estate/: __init__.py  config.py  validator.py
real_estate/chain/: __init__.py  client.py  errors.py  models.py  subtensor.py
real_estate/data/: __init__.py  config_encoder.py  errors.py  feature_encoder.py  feature_transforms.py  image_bundle.py  models.py  scraper_client.py  validation_client.py  validation_dataset_client.py
real_estate/data/mappings/: cities.json  feature_config.yaml  property_types.json  states.json
real_estate/duplicate_detection/: __init__.py  detector.py  errors.py  factory.py  grouper.py  models.py
real_estate/duplicate_detector/: __init__.py  detector.py  factory.py
real_estate/evaluation/: Dockerfile  __init__.py  docker_runner.py  errors.py  inference_script.py  metrics.py  models.py  orchestrator.py
real_estate/generalization_detector/: __init__.py  detector.py  models.py  perturbation.py
real_estate/incentives/: __init__.py  distributor.py  errors.py  models.py  scorer.py
real_estate/miner_cli/: __init__.py  chain.py  cli.py  config.py  errors.py  evaluate.py  miner_cli.py  models.py  submit.py  test_samples.json  utils.py
real_estate/model_inspector/: __init__.py  inspection_script.py  inspector.py  models.py
real_estate/models/: __init__.py  cache.py  downloader.py  errors.py  exclusive_license.py  factory.py  models.py  scheduler.py  verifier.py
real_estate/observability/: __init__.py  models.py  wandb_logger.py
real_estate/orchestration/: __init__.py  models.py  orchestrator.py
real_estate/randomness/: __init__.py  models.py  provider.py
real_estate/tests/: __init__.py  conftest.py  test_validator.py
real_estate/tests/fixtures/data/: cities.json  cities_invalid.json  feature_config.yaml  feature_config_invalid_mapping.yaml  feature_config_missing_mapping.yaml  feature_config_unregistered_transform.yaml  property_types.json
real_estate/tests/fixtures/evaluation/: conftest.py
real_estate/tests/integration/: test_hf_token_integration.py
real_estate/tests/integration/evaluation/: test_docker_evaluation.py
real_estate/tests/integration/localnet/: conftest.py  test_randomness.py
real_estate/tests/integration/orchestration/: __init__.py  test_validation_orchestrator.py
real_estate/tests/unit/: conftest.py  test_validator.py
real_estate/tests/unit/chain/: __init__.py  test_client.py
real_estate/tests/unit/data/: test_config_encoder.py  test_feature_encoder.py  test_feature_transforms.py  test_image_bundle.py  test_legacy_model_support.py  test_scraper_client.py  test_validation_client.py  test_validation_dataset_client.py
real_estate/tests/unit/duplicate_detection/: test_detector.py  test_factory.py  test_grouper.py  test_models.py
real_estate/tests/unit/duplicate_detector/: __init__.py  test_detector.py  test_factory.py  test_grouper.py  test_models.py
real_estate/tests/unit/evaluation/: test_docker_runner.py  test_metrics.py  test_models.py  test_orchestrator.py
real_estate/tests/unit/generalization_detector/: test_detector.py  test_perturbation.py
real_estate/tests/unit/incentives/: __init__.py  test_distributor.py  test_models.py  test_scorer.py
real_estate/tests/unit/model_inspector/: test_inspector.py  test_models.py
real_estate/tests/unit/models/: conftest.py  test_cache.py  (+4 more)
real_estate/tests/unit_tests/: __init__.py  test_validator.py
real_estate/utils/: __init__.py  misc.py  price.py
real_estate/validator/: __init__.py  __main__.py  config.py  testing.py  validator.py
scripts/: compute_hash.py  create_dummy_onnx.py  logging.conf.example  organize_validator_logs.sh  start_validator.py  test_commitments.py  test_pylon_client.py  test_pylon_commitments.py  test_validator_workflow.py
tests/: conftest.py  test_mock.py  test_placeholder.py
(+13 files in other folders)
